--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Fluxor/*.fpk filter=lfs diff=lfs merge=lfs -text
 PeerBanHelper/*.fpk filter=lfs diff=lfs merge=lfs -text
+qBittorrent-Enhanced/qBittorrent-Enhanced.fpk filter=lfs diff=lfs merge=lfs -text
