--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@ qBittorrent-Enhanced/qBittorrent-Enhanced.fpk filter=lfs diff=lfs merge=lfs -tex
 uptime-kuma/uptime-kuma.fpk filter=lfs diff=lfs merge=lfs -text
 Komga/Komga.fpk filter=lfs diff=lfs merge=lfs -text
 Golang/Golang.fpk filter=lfs diff=lfs merge=lfs -text
+Reader/Reader.fpk filter=lfs diff=lfs merge=lfs -text
